# DataEvol

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  dataevol.toml.example  pyproject.toml
Docs/: api.md  expert_dataset_sourcing.md  harness.md  integrations.md  prd 1.rtf  quickstart.md  relational_coordinate_project_task_list.md  release_v0.1.0.md  reusable_lora_socket_experiment.md  rl_socket_v2_experiment.md
Docs/experiments/: reusable_lora_socket_mvp_v3.json
configs/: rl_socket_targeted_arithmetic.yaml  rl_socket_v2.yaml  rl_socket_v2_1_two_seed.yaml
examples/: compiled_python_repair_harness.json  harness_task.json
examples/benchmarks/: router_policy_fixture_metrics.json
examples/idea_prds/: router_policy_cost_idea.md
examples/runs/: biolatent_run.json  mock_coordinate_run.json  mock_router_biolatent_trace.json  router_decisions.json
migrations/: 001_init.sql  002_harness.sql  003_harness_verdicts.sql  004_local_model_training_jobs.sql  005_compiled_harness_execution.sql
tests/: test_adapter_training_config.py  test_cli_api.py  test_codex_execution_outcomes.py  test_codex_route_classifiers.py  test_codex_route_ranker.py  test_codex_router_training.py  test_codex_routing.py  test_compiled_harness_execution.py  test_evolution_loop.py  test_execution_contract.py  test_harness_compat_cli_api.py  test_harness_evolution_loop.py  test_harness_genome.py  test_harness_promotion.py  test_harness_reference_executor.py  test_harness_scoring.py  test_harness_specialists_fake.py  test_harness_verdicts.py  test_layer_remote_dataset.py  test_layer_specialist.py  test_layer_training_jobs.py  test_layerscope_benchmark.py  test_layerscope_depth_policy.py  test_measured_experiments.py  test_migrations_sorted.py  test_model_client.py  test_remaining_checklist.py  test_reusable_lora_socket.py  test_rl_socket_pipeline.py  test_rl_socket_trainer.py  test_rlmf_fixture.py  test_smoke_suite.py  test_specialist_server.py  test_storage_pipeline.py  test_subprocess_executor.py
(+121 files in other folders)
