[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataevol"
version = "0.1.0"
description = "DataEvol CLI and local API shell for trace ingestion, labeling, benchmarks, and experiments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "DataEvol Contributors" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]
train = [
  "mlx-lm>=0.31,<1.0",
  "safetensors>=0.4,<1.0",
]

[project.scripts]
dataevol = "dataevol.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dataevol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
